--- a/contact.html
+++ b/contact.html
@@ -12,18 +12,23 @@
     <header class="navbar header">
       <div class="col-md-3"></div>
       <div class="col-md-1"><a href="index.html">Home</a></div>
-      <div class="col-md-1"><a href="index.html#education">Education</a></div>
-      <div class="col-md-1"><a href="index.html#experience">Experience</a></div>
-      <div class="col-md-1"><a href="index.html#projects">Projects</a></div>
+      <div class="col-md-1"><a href="timeline.html">Timeline</a></div>
+      <div class="col-md-1"><a href="projects.html">Projects</a></div>
       <div class="col-md-1"><a href='#'>Contact</a></div>
       <div class="col-md-3"></div>
     </header>
     <div>
-      <h2>Venkata Siva Sai Dheeraj Ramisetti</h2>
-      <hr>
-      <div class="contact">Email: ramisett@usc.edu</div>
-      <div class="contact">Phone: +1 (682) 230-4656</div>
-      <div class="contact">Address: 2700 Ellendale Pl, Apt 106, Los Angeles, California 90007</div>
+      <div>
+        <span class="floatLeft changeBlock"><h2>Venkata Siva Sai Dheeraj Ramisetti</h2></span>
+        <span class="resumefloatright"><a href="http://www-scf.usc.edu/~ramisett/Resume.pdf" target="_blank">Resume</a></span>
+      </div>
+      <hr class="clearLeft">
+      <div class="marginLeft">
+        <h3>Contact</h3>
+        <div class="contact">Email: <a href="mailto:ramisett@usc.edu">ramisett@usc.edu</a></div>
+        <div class="contact">Phone: +1 (682) 230-4656</div>
+        <div class="contact">Address: 2700 Ellendale Pl, Apt 106, Los Angeles, California 90007</div>
+      </div>
     </div>
     <footer class="navbar fixed-bottom">
       <!--here comes the social media stuff-->
