--- a/index.html
+++ b/index.html
@@ -13,178 +13,37 @@
       <header class="navbar header">
         <div class="col-md-3"></div>
         <div class="col-md-1"><a href="#">Home</a></div>
-        <div class="col-md-1"><a href="#education">Education</a></div>
-        <div class="col-md-1"><a href="#experience">Experience</a></div>
-        <div class="col-md-1"><a href="#projects">Projects</a></div>
+        <div class="col-md-1"><a href="timeline.html">Timeline</a></div>
+        <div class="col-md-1"><a href="projects.html">Projects</a></div>
         <div class="col-md-1"><a href='contact.html'>Contact</a></div>
         <div class="col-md-3"></div>
       </header>
+    </div>
     <div id = "shotBio">
-      <h2>Venkata Siva Sai Dheeraj Ramisetti</h2>
-      <hr>
-    </div>
-    <div id = "education">
-      <br><br>
-      <h3>Education</h3>
-        <div class="lvl1">
-          <span><h5>University of Southern California, Los Angeles, California</h5></span>
-          <span>Master of Science, Computer Science</span><br>
-          <span>GPA: 3.32 / 4.0</span><br>
-          <span>Coursework: Analysis of Algorithms, Web Technologies, Information Retrieval, Artificial Intelligence, Machine Learning, Natural Language Processing</span>
-        </div>
-        <br>
-        <div class="lvl1">
-          <span><h5>Amrita Vishwa Vidyapeetham, Coimbatore, Tamil Nadu, India</h5></span>
-          <span>Bachelor of Technology, Computer Science and Engineering</span><br>
-          <span>GPA: 8.53 / 10.0</span><br>
-          <span>Coursework: Data Structures, OOP, DBMS.....</span><br>
-        </div>
-    </div>
-    <div id = "experience">
-      <br><br>
-      <h3>Experience</h3>
-      <div class="lvl1">
-        <span><h5>Test Automation Intern</h5></span>
-        <span><h6>Polaris Consultancy and Services Ltd., Hyderabad, India</h6></span>
-      </div>
       <div>
-        <ul>
-          <li>
-            Developed a Test Automation Software for SpiceJet web application in Java using Selenium WebDriver with support for all major browsers
-          </li>
-          <li>
-            Inputs are plugged into the website from an excel document and corresponding messages logged using JXL API
-          </li>
-
-        </ul>
+        <span class="floatLeft changeBlock"><h2>Venkata Siva Sai Dheeraj Ramisetti</h2></span>
+        <span class="resumefloatright"><a href="http://www-scf.usc.edu/~ramisett/Resume.pdf" target="_blank">Resume</a></span>
       </div>
-
-
+      <hr>
+      <ul class = "marginLeft">
+        <li>
+          Graduate Student at University of Southern California
+        </li>
+        <li>
+          Working as a web developer under Lucas Carden.
+        </li>
+        <ul>
+          <li>Created a Sushi game in which the user has prepare sushi by following instructions on the screen.
+            The user is tested before and after 3 timed practices. Change in the performance is analyzed to draw conclustions on the impact of type of instructions in the process of learning
+          </li>
+          <li>
+            Now working on a similar game based on learning to play a piano.
+          </li>
+        </ul>
+      </ul>
     </div>
-    <div id="projects">
-      <br><br>
-      <h3>Projects</h3>
-      <div class="someTab">
-        <div>
-          <span class="floatLeft">
-            <h5>Sushi Game</h5>
-          </span>
-          <span>
-            <a id="link" href="http://surveys.myhabitlab.org/SushiGame/public/index.php/login/zxc3sd">[link]</a>
-          </span>
-          <span>
-            <a id="link" href="http://surveys.myhabitlab.org/SushiGame/public/index.php/login2/zxc3sd">[link]</a>
-          </span>
-        </div>
-        <ul>
-          <li class="clearLeft">
-            Developed a game for the study required for the dissertation of Lucas Carden
-          </li>
-          <li>
-            Player has to make Sushi by following the instructions provided on the screen and dragging and dropping ingredients.
-          </li>
-          <li>
-            In the second stage, the player is asked to play the game again, this time in a timed environemt.
-          </li>
-          <li>
 
-          </li>
-          <li>
-            Used slime framework, php, js, phaser
-
-          </li>
-        </ul>
-      </div>
-      <div class="someTab">
-        <div>
-          <span class="floatLeft">
-            <h5>Piano Game (ONGOING)</h5>
-          </span>
-          <span>
-            <a href="" alt="link">[link]</a>
-          </span>
-        </div>
-        <ul>
-          <li class="clearLeft">
-            Developed a game for the study requied for the dissertation of Lucas Carden
-          </li>
-        </ul>
-      </div>
-      <div class="someTab">
-        <h5>Police Location Generator for Vehicle accident help</h5>
-        <ul>
-          <li>
-            Developed an algorithm to assign applicants optimally to organizations that serve the homeless community.
-          </li>
-          <li>
-            Implemented several different AI techniques such as greedy-heuristic search, an optimized max-max algorithm, iterative deepening to reduce the search space
-          </li>
-          <li>
-            Used Dynamic Programming to reduce the runtime of the algorithm from exponential to polynomial.
-          </li>
-          <li>
-            Generated solution within 3 minutes up until an applicant pool of size 150 with at least 80% accommodation.
-          </li>
-        </ul>
-      </div>
-      <div class="someTab">
-        <h5>Automated Car Simulation Through Obstacles and Uncertainty</h5>
-        <ul>
-          <li>
-            Designed an algorithm to create a model for a car to simulate through an environment with obstacles and probability of failure in the actions being taken.
-          </li>
-          <li>
-            Implemented Markov Decision Process using reinforcement learning and dynamic programming to optimize the gains of the system. Used a modified version of policy iteration and value iteration for better results.
-          </li>
-        </ul>
-      </div>
-      <div class="someTab">
-        <h5>Travel and Entertainment Search Web Application</h5>
-        <ul>
-          <li>
-            Developed a Web application and an Android application that allows users to search for places with an option to add filters for advanced results.
-          </li>
-          <li>
-            Results are requested by a backend server (hosted on AWS) from relevant Google and Yelp APIs.
-          </li>
-        </ul>
-      </div>
-      <div class="someTab">
-        <div>
-          <span class="floatLeft">
-            <h5>Genetic Algorithm based hybrid attribute selection</h5>
-          </span>
-          <span>
-            <a href="https://link.springer.com/chapter/10.1007/978-3-319-71767-8_1">[link]</a>
-          </span>
-        </div>
-        <ul>
-          <li class="clearLeft">
-            Proposed and implemented a hybrid approach combining a filter method (Information Gain) and a wrapper method (Genetic Algorithm with a custom fitness function) for attribute selection of genes in cancer gene data.
-          </li>
-          <li>
-            Proposed hybrid approach produces comparably better accuracy than the standard implementation of the GA.
-          </li>
-        </ul>
-      </div>
-      <div class="someTab">
-        <h5>Electronic Fund Transfer Android Application</h5>
-        <ul>
-          <li>
-            Developed an Android application which allows users to make virtual money transactions. Users can request money and are notified via SMS. PHP server was hosted on a WAMP server.
-          </li>
-        </ul>
-      </div>
-      <div class="someTab">
-        <h5>GASÉ Search Engine</h5>
-        <ul>
-          <li>
-            Designed and implemented a search engine in Python, to retrieve optimal search results from a limited data set with minimum time complexity.
-          </li>
-        </ul>
-      </div>
-    </div>
-    <footer class="navbar">
+    <footer class="navbar fixed-bottom">
       <!--here comes the social media stuff-->
       <div class="col-md-2"></div>
       <div class="col-md-2"><a href="https://www.linkedin.com/in/rvssdheeraj/" target="_blank">LinkedIn</a></div>
