--- a/index.html
+++ b/index.html
@@ -19,27 +19,31 @@
         <div class="col-md-3"></div>
       </header>
     </div>
-    <div id = "shotBio">
+    <div id = "shortBio">
       <div>
         <span class="floatLeft changeBlock"><h2>Venkata Siva Sai Dheeraj Ramisetti</h2></span>
         <span class="resumefloatright"><a href="http://www-scf.usc.edu/~ramisett/Resume.pdf" target="_blank">Resume</a></span>
       </div>
       <hr>
+      <div class="myImage">
+        <img src="dheeraj.jpg">
+      </div>
+      <br><br>
       <ul class = "marginLeft">
         <li>
           Graduate Student at University of Southern California
         </li>
         <li>
-          Working as a web developer under Lucas Carden.
+          Working as a web developer under PhD student Lucas Carden.
         </li>
-        <ul>
+        <ol>
           <li>Created a Sushi game in which the user has prepare sushi by following instructions on the screen.
-            The user is tested before and after 3 timed practices. Change in the performance is analyzed to draw conclustions on the impact of type of instructions in the process of learning
+            The user is tested before and after 3 timed practices. Change in the performance is analyzed to draw conclusions on the impact of type of instructions in the process of learning
           </li>
           <li>
-            Now working on a similar game based on learning to play a piano.
+            Now working on developing a game based on learning to play a piano.
           </li>
-        </ul>
+        </ol>
       </ul>
     </div>
 
