--- a/projects.html
+++ b/projects.html
@@ -51,11 +51,7 @@
             In the second stage, the player is asked to play the game again, this time in a timed environemt.
           </li>
           <li>
-
-          </li>
-          <li>
             Used slime framework, php, js, phaser
-
           </li>
         </ul>
       </div>
@@ -70,7 +66,7 @@
         </div>
         <ul>
           <li class="clearLeft">
-            Developed a game for the study requied for the dissertation of Lucas Carden
+            Developing a game for the study required for the dissertation of Lucas Carden
           </li>
         </ul>
       </div>
