--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <div class="col-md-1"><a href='#'>Contact</a></div>
       <div class="col-md-3"></div>
     </header>
-    <div>
+    <div class="main">
       <div>
         <span class="floatLeft changeBlock"><h2>Venkata Siva Sai Dheeraj Ramisetti</h2></span>
         <span class="resumefloatright"><a href="http://www-scf.usc.edu/~ramisett/Resume.pdf" target="_blank">Resume</a></span>
