--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="col-md-3"></div>
       </header>
     </div>
-    <div id = "shortBio">
+    <div class="main" id = "shortBio">
       <div>
         <span class="floatLeft changeBlock"><h2>Venkata Siva Sai Dheeraj Ramisetti</h2></span>
         <span class="resumefloatright"><a href="http://www-scf.usc.edu/~ramisett/Resume.pdf" target="_blank">Resume</a></span>
@@ -31,7 +31,7 @@
       <br><br>
       <ul class = "marginLeft">
         <li>
-          Graduate Student at University of Southern California
+          Computer Science graduate student at University of Southern California
         </li>
         <li>
           Working as a web developer under PhD student Lucas Carden.
