--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
       </div>
       <hr>
     </div>
-    <div id="projects">
+    <div class="main" id="projects">
       <h3>Projects</h3>
       <div class="someTab">
         <div>
@@ -144,7 +144,7 @@
         </ul>
       </div>
     </div>
-    <footer class="navbar">
+    <footer class="navbar fixed-bottom">
       <!--here comes the social media stuff-->
       <div class="col-md-2"></div>
       <div class="col-md-2"><a href="https://www.linkedin.com/in/rvssdheeraj/" target="_blank">LinkedIn</a></div>
