--- a/timeline.html
+++ b/timeline.html
@@ -26,7 +26,7 @@
       </div>
       <hr>
     </div>
-    <div id = "timeline">
+    <div class="main" id = "timeline">
       <h3>Timeline</h3>
       <h4>2018 - 2019</h4>
       <ul>
@@ -87,7 +87,7 @@
       </ul>
     </div>
 
-    <footer class="navbar">
+    <footer class="navbar fixed-bottom">
       <!--here comes the social media stuff-->
       <div class="col-md-2"></div>
       <div class="col-md-2"><a href="https://www.linkedin.com/in/rvssdheeraj/" target="_blank">LinkedIn</a></div>
